--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -149,35 +149,58 @@
 		under  Dr. David Casperson. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
 	\end{frame}
 
+%% ====================================================================-
+%% ====================================================================-
+\section{Introduction}
+
+
+%% -------------------------------------------------------------------
 \begin{frame}[allowframebreaks]
-\frametitle{Overview} % Table of contents slide, comment this block out to remove it
+\frametitle{Introduction} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \note[item]{We will being with a preliminaries, motivation and background along with an overview of the contributions.}
 \note[item]{Next, we dive into the approaches to merge different programming languages and the languages themselves.}
 \note[item]{We will also look at our methodology and the prototype implementations.}
 \note[item]{And lastly, we sum up. So let's get cracking.}
 \end{frame}
+%% -------------------------------------------------------------------
+
+
+
 
 %% ====================================================================-
 %% ====================================================================-
-\section{Introduction}
+\section{Background}
 
-\subsection{Introduction Overview}
-\begin{frame}{Introduction Overview}
+%% -------------------------------------------------------------------
+\begin{frame}{Background Overview}
+\frametitle{Background Overview}
 
-\frametitle{Introduction Overview}
-\note[item]{In this section we will talk about,}
 \begin{itemize}
+\note[item]{In this section we will talk about,}
 \item Programming languages and paradigms.
 \note[item]{Programming languages and programming paradigms.}
 
 \item Classification.
 \note[item]{How they are classified}
+\note[item]{For the background, we will look at,}
+
+\item Declarative programming and languages.
+\note[item]{The declarative stlye of programming,} 
+
+\item Functional and logic programming.
+\note[item]{and it's sub-paradigms functional and logic programming,}
+
+\item \progLang{Haskell} and \progLang{Prolog}.
+\note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
+
+\item Merging programming languages.
+\note[item]{And the approaches for bringing programming languages together.}
 \end{itemize}
-
-
 \end{frame}
+%% -------------------------------------------------------------------
 
+%% ====================================================================-
 \subsection{Programming Languages}
 \begin{frame}{Programming Languages}
 \begin{columns}[T]
