--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -821,7 +821,7 @@ particular domain.}
 \end{itemize}
 
 \item Other Contributions,
-note[item]{In this section we will talk about, the contributions which are not neccessary an improvement on the current work but a new
+\note[item]{In this section we will talk about, the contributions which are not neccessary an improvement on the current work but a new
 	direction for solving the problem of embedding languages.}
 \begin{itemize}
 	\item Modular \textit{functorizing} mechanism.
