What we did fix.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -804,15 +804,20 @@ particular domain.}
 %% ====================================================================-
 \section{What we did}
 
-%% ====================================================================-
-\subsection{Overview}
+%% -------------------------------------------------------------------
 \begin{frame}{What we did Overview}
 	
 	\frametitle{What we did Overview}
 \begin{itemize}
+\item Literature review
+  \begin{itemize}
+  \item We reviewed literature on embedded languages (Chapter~5)
+  \item We reviewed literature on merging programming
+    languages (Chapter~6)
+  \end{itemize}
 \item Improvements,
 \begin{itemize}
-	\item Practical features.
+        \item Practical features.
 	\note[item]{Firstly, we added practical features a \progLang{Prolog} distribution might, these being \prologConstruct{cut} and
 		\prologConstruct{fail}.}
 	
