Changed section name from What remains to do to What remains to be done.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1125,7 +1125,7 @@ direction for solving the problem of embedding languages.}
 
 %% ====================================================================-
 %% ====================================================================-
-\section{What remains to do}
+\section{What remains to be done}
 
 %% ====================================================================-
 \subsection{Future Scope}
