Added content and script to Conclusion.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1161,8 +1161,19 @@ to be of different types.}
 \section{Conclusion}
 %% ---------------------------------------------------------------------
 \begin{frame}{Conclusion}
+\note[item]{In conclusion, we set out to explore the various approaches for bringing languages together}
 \begin{itemize}
-\item
+\item Embedded domain specific language in \progLang{Haskell}.
+\note[item]{support for eDSL's \progLang{Haskell}}
+
+\item \progLang{Prolog}-like language which is closer to a \progLang{Prolog} distribution.
+\note[item]{A more "complete" \progLang{Prolog} in \progLang{Haskell}.}
+
+\item Prototype implementations.
+\note[item]{We tested out methodologies for replicating functionalities with some prototypes.}
+
+\item \progLang{Haskell}, an effective tool for embedding domain specific languages.
+\note[item]{\progLang{Haskell}, an effective tool for embedding domain specific languages.}
 \end{itemize}
 
 \end{frame}
