Added script to Thank you frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1184,6 +1184,8 @@ to be of different types.}
 \begin{center}
 \Huge Thank you!
 \end{center}
+\note[item]{That concludes the presentation.}
+\note[item]{Ladies and gentlemen, thank you for your patience.}
 \end{frame}
 %% ---------------------------------------------------------------------
 
