Added script to Questions frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1194,6 +1194,7 @@ to be of different types.}
 \begin{center}
 \Huge Questions?
 \end{center}
+\note[item]{And questions please.}
 \end{frame}
 %% ---------------------------------------------------------------------
 
