Modified allowframebreaks option to fit table of contents on a single frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -155,7 +155,7 @@
 
 
 %% -------------------------------------------------------------------
-\begin{frame}[allowframebreaks]
+\begin{frame}[allowframebreaks=1.1]
 \frametitle{Introduction} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \note[item]{We will being with a preliminaries, motivation and background along with an overview of the contributions.}
