Modified script according to presentation structure.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -158,10 +158,11 @@
 \begin{frame}[allowframebreaks=1.1]
 \frametitle{Introduction} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
-\note[item]{We will being with a preliminaries, motivation and background along with an overview of the contributions.}
-\note[item]{Next, we dive into the approaches to merge different programming languages and the languages themselves.}
-\note[item]{We will also look at our methodology and the prototype implementations.}
-\note[item]{And lastly, we sum up. So let's get cracking.}
+\note[item]{We will begin with languages and how they are combined.}
+\note[item]{The problem this thesis contributes to.}
+\note[item]{Some concepts and the prototype implementations.}
+\note[item]{And lastly, we sum up with possible directions.} 
+\note[item]{So let's get started.}
 \end{frame}
 %% -------------------------------------------------------------------
 
