Modified Background Overview content and script in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -179,24 +179,21 @@
 
 \begin{itemize}
 \note[item]{In this section we will talk about,}
-\item Programming languages and paradigms.
+\item Programming languages and \progLang{Haskell} and \progLang{Prolog}.
 \note[item]{Programming languages and programming paradigms.}
+\note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
 
 \item Classification.
 \note[item]{How they are classified}
-\note[item]{For the background, we will look at,}
 
-\item Declarative programming and languages.
-\note[item]{The declarative stlye of programming,} 
+\item Programming paradigms and declarative programming.
+\note[item]{Next paradigms and the declarative stlye of programming in particular,} 
 
 \item Functional and logic programming.
 \note[item]{and it's sub-paradigms functional and logic programming,}
 
-\item \progLang{Haskell} and \progLang{Prolog}.
-\note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
-
-\item Merging programming languages.
-\note[item]{And the approaches for bringing programming languages together.}
+\item Bringing programming languages together.
+\note[item]{lastly the approaches for bringing programming languages together.}
 \end{itemize}
 \end{frame}
 %% -------------------------------------------------------------------
