Modified script for Haskell in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -226,23 +226,23 @@ A programming language is an artificial language designed to communicate instruc
 %% -------------------------------------------------------------------
 \begin{frame}
 \frametitle{\progLang{Haskell}}
- \note[item]{One such language is \progLang{Haskell}.} 
+ \note[item]{So \progLang{Haskell} is a functional language,} 
   \begin{columns}[T]
     \begin{column}{.7\textwidth}
      \begin{block}{}
 \progLang{Haskell} is an advanced purely-functional programming language. In particular, it is a 
 \begin{itemize}
 \item Polymorphically statically typed,
-\note[item]{Every expression in Haskell has a type which is determined at compile time.}
+\note[item]{which is statically typed meaning every expression in Haskell has a type which is determined at compile time.}
 
 \item Type inference,
-\note[item]{You don't have to explicitly write out every type in a Haskell program.}
+\note[item]{has type type inference meaning you don't have to explicitly write out every type in a Haskell program.}
 
 \item Lazy,
-\note[item]{Functions don't evaluate their arguments until required.}
+\note[item]{is lazy meaning functions don't evaluate their arguments until required.}
 
 \item Purely Functional.
-\note[item]{Every function in Haskell is a function in the mathematical sense (i.e., "pure").}
+\note[item]{and is purely funcitonal meaning every function in Haskell is a function in the mathematical sense (i.e., "pure").}
 \end{itemize}
 
     \end{block}
