Modified content and added script to Prolog in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -289,8 +289,11 @@ A programming language is an artificial language designed to communicate instruc
     \begin{column}{.6\textwidth}
      \begin{block}{}
 General purpose logic programming language with over 20 distributions. \progLang{Prolog} is a programming language borrowing its basic 
-constructs from logic. A pure \progLang{Prolog} program is a logic program, in which an order is defined both clauses in the program and 
+constructs from logic. A pure \progLang{Prolog} program is a logic program, in which an order is defined for both clauses in the program and 
 for goals in the body of the clause.
+\note[item]{\progLang{Prolog} is a general purpose programming language in which programs consist of facts and rules used to solve a 
+query.}
+\note[item]{It has a number of distributions, \progLang{SWI Prolog} being one of the popular ones.}
     \end{block}
     \end{column}
     \begin{column}{.4\textwidth}
