Modified script for Declarative Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -371,12 +371,12 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \note[item]{It further branches out into functional and logic programming.}
 
 \item Programming in a functional language consists of building definitions and using the computer to evaluate expressions.
-\note[item]
+\note[item]{A funcitonal language is all about building and applying functions.}
 
 \item In logic programming, a program consists of a collection of statements ex-pressed as formulas in symbolic logic. There are rules of 
 inference from logic that allow a new formula to be derived from old ones, with the guarantee that if the old formulas are true, so is the 
 new one.
-\note[item]{Logic programming allows a new formula to be dreived from the old ones. A logic programming consists of a set of facts and 
+\note[item]{Logic programming allows a new formula to be derived from the old ones. A logic programming consists of a set of facts and 
 rules. And these are used to solve a query.}
 
 \item For example, \progLang{Haskell}(functional language) and \progLang{Prolog}(logic language).
