Modified content and script for Programmer's Dilemma.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -601,12 +601,12 @@ capabilities.}
 \begin{frame}
 \frametitle{Programmer's Dilemma}
 \note[item]{Choosing a language is quite a daunting task. There are costs related to migration, training among others.}
-\note[item]{And not to mention the options.}
+\note[item]{And not to mention the plethora of options.}
 \begin{figure}
-    \includegraphics[height = 0.6\textwidth, width=0.6\textwidth]{programming-languages_2.png} 
+    \includegraphics[height = 0.5\textwidth, width=0.5\textwidth]{programming-languages_2.png} 
     \caption{The Graph of programming Languages}
  \end{figure} 
- \note[item]{}
+ \note[item]{The graph depicts the varoius languages and how they are influenced and/or related to each other.}
 \end{frame}
 
 %% ====================================================================-
