Added script to Thesis Statement.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -618,6 +618,7 @@ capabilities.}
      languages namely, \progLang{Haskell} and \progLang{Prolog} by
      embedding the latter into the former and analyzing the result of
      doing so\dots\,.
+     \note[item]{\textcolor{red}{Read out Thesis statement.}}
    \end{block}
         \begin{itemize}
       \item Replicating functionality.
