Added subsection for Pattern Matching.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -660,6 +660,7 @@ steps (also called actions), in which each action is decorated with additional p
 %% -------------------------------------------------------------------
 	
 %% -------------------------------------------------------------------
+\subsection{Pattern Matching}
 \begin{frame}[fragile]
 
 \frametitle{Pattern Matching}
