Added subsection for Unification.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -683,7 +683,8 @@ fib n = fib (n-1) + fib (n-2)
 %% -------------------------------------------------------------------
 
 %% -------------------------------------------------------------------
-\begin{frame}
+\subsection{Unification}
+\begin{frame}[fragile]
 \frametitle{Unification}
 \begin{itemize}
 \item The way in which \progLang{Prolog} matches two terms is called unification. 
