--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -691,13 +691,15 @@ fib n = fib (n-1) + fib (n-2)
 \note[item]{The idea is similar to that of unification in logic: we have two terms and we want to see if they can be made to represent the same structure.}
 \begin{itemize}
 \item If term1 and term2 are constants, then term1 and term2 unify if and only if they are the same atom, or the same number.
-
+\note[item]{Constants are unified if they are the same.}
 \item If term1 is a variable and term2 is any type of term, then term1 and term2 unify, and term1 is instantiated to term2 . Similarly, if term2 is a variable and term1 is any type of term, then term1 and term2 unify, and term2 is instantiated to term1 . (So if they are both variables, they’re both instantiated to each other, and we say that they share values.)
+\note[item]{If one of the terms is a variable then it is instantiated to the other term.}
 
 \item If term1 and term2 are complex terms, then they unify if and only if:
 They have the same functor and arity, and
 all their corresponding arguments unify, and
 the variable instantiations are compatible.
+\note[item]{For nested terms, we match the heads and the number of arguments before finding a unifier.}
 
 \item Two terms unify if and only if it follows from the previous three clauses that they unify.
 \end{itemize}
