Corrected typo in What was done.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -818,7 +818,8 @@ particular domain.}
 \note[item]{state of each step in computation is passed on as a stream of answer substitutions,}
 
 \item Implementing a typed functional logic programming language.
-\note[item]{T6o get full static typing we need to use the \progLang{Haskell} extensions of quantified types and the \haskellConstruct{ST Monad}.}
+\note[item]{To get full static typing we need to use the \progLang{Haskell} extensions of quantified types and the \haskellConstruct{ST 
+Monad}.}
 \end{itemize}
 
 \item Libraries.
