Added twitter reference for Scala and corrected typo.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -520,7 +520,7 @@ intermixing constructs from different paradigms.
 
 \item For example, \progLang{Scala} is an object functional programming language.
 \note[item]{A notable example is \progLang{Scala}, object functional language based on \progLang{Java}. Simply put it is Java with strong 
-	funcitonal characteristics such as higher order functions.}
+	functional characteristics such as higher order functions. Twitter is written in \progLang{Scala}.}
 
 \item Functional Logic programming languages.
 \note[item]{are hybrid declarative languages exhibiting functional and logic programming languages.}
