Corrected typos throughout presentation.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -676,7 +676,7 @@ and hence the computation remains.}
 \note[item]{In pattern matching, we matry and match values against patterns to bind values to variables.}
 \note[item]{Pattern matching can either fail, succeed or diverge.}
 
-\item Consider the example of the fibonacci series in \progLang{Haskell}.
+\item Consider the example of the Fibonacci series in \progLang{Haskell}.
 \begin{minted}[linenos]{haskell}
 fib 0 = 0
 fib 1 = 1
@@ -718,7 +718,7 @@ the variable instantiations are compatible.
 \frametitle{Unification Examples} 
 \note[item]{Let us take a look at a few examples,}
 \begin{itemize}
-\item Unifying varaibles,
+\item Unifying variables,
 
 \begin{minted}[linenos]{prolog} 
 (X,2) = (1,Y). 
@@ -1068,7 +1068,8 @@ direction for solving the problem of embedding languages.}
 \note[item]{Prototype 1 is only unification.}
 
 \item Prototype 2 is a \progLang{Prolog}-like interpreter.
-\note[item]{The base implementation is taken from an already existing library for \progLang{Prolog} in \progLang{Haskell} and modified to accomodate an open grammar for the language and monadic unification.}
+\note[item]{The base implementation is taken from an already existing library for \progLang{Prolog} in \progLang{Haskell} and modified to 
+accommodate an open grammar for the language and monadic unification.}
 \note[item]{This prototype serves as a test to prove the modularity and flexibility of the procedures from prototype 1.}
 
 \end{itemize}
@@ -1167,7 +1168,7 @@ direction for solving the problem of embedding languages.}
 
 \begin{frame}{Future Scope}
 \begin{itemize}
-\item Quasi quoter with antiquotation.
+\item Quasi quoter with anti-quotation.
 \note[item]{Quasiquoting allows programmers to use custom, domain-specific syntax to construct fragments of their program.} 
 \note[item]{Antiquotation allows interchangeable usage of programming constructs of different languages in the same expression.}
 
