Adjusted options for Introduction frame.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -155,8 +155,9 @@
 
 
 %% -------------------------------------------------------------------
-\begin{frame}[allowframebreaks=1.1]
+\begin{frame}[allowframebreaks=1.3]
 \frametitle{Introduction} % Table of contents slide, comment this block out to remove it
+\fontsize{10}{7.2}\selectfont
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \note[item]{We will begin with languages and how they are combined.}
 \note[item]{The problem this thesis contributes to.}
